Upgrade URL Validation