@@ -48,7 +48,8 @@ import org.prebid.server.vertx.httpclient.model.HttpClientResponse;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneId;
@@ -102,12 +103,12 @@ public class CoreCacheServiceTest extends VertxTest {
     private Timeout expiredTimeout;
 
     @BeforeEach
-    public void setUp() throws MalformedURLException, JsonProcessingException {
+    public void setUp() throws MalformedURLException, URISyntaxException, JsonProcessingException {
         clock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
 
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -253,13 +254,13 @@ public class CoreCacheServiceTest extends VertxTest {
 
     @Test
     public void cacheBidsOpenrtbShouldTryCallingInternalEndpointAndTolerateReadingHttpResponseFails()
-            throws JsonProcessingException, MalformedURLException {
+            throws JsonProcessingException, MalformedURLException, URISyntaxException {
 
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
-                new URL("http://cache-service-internal/cache"),
+                new URI("http://cache-service/cache").toURL(),
+                new URI("http://cache-service-internal/cache").toURL(),
                 "http://cache-service-host/cache?uuid=",
                 100L,
                 null,
@@ -434,11 +435,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cacheBidsOpenrtbShouldUseApiKeyWhenProvided() throws MalformedURLException {
+    public void cacheBidsOpenrtbShouldUseApiKeyWhenProvided() throws MalformedURLException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -875,12 +876,12 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cachePutObjectsShouldCallInternalCacheEndpointWhenProvided() throws IOException {
+    public void cachePutObjectsShouldCallInternalCacheEndpointWhenProvided() throws IOException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
-                new URL("http://cache-service-internal/cache"),
+                new URI("http://cache-service/cache").toURL(),
+                new URI("http://cache-service-internal/cache").toURL(),
                 "http://cache-service-host/cache?uuid=",
                 100L,
                 null,
@@ -927,11 +928,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cachePutObjectsShouldUseApiKeyWhenProvided() throws MalformedURLException {
+    public void cachePutObjectsShouldUseApiKeyWhenProvided() throws MalformedURLException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -969,11 +970,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cacheBidsOpenrtbShouldPrependTraceInfoWhenEnabled() throws IOException {
+    public void cacheBidsOpenrtbShouldPrependTraceInfoWhenEnabled() throws IOException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -1039,11 +1040,13 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cacheBidsOpenrtbShouldPrependTraceInfoWithDatacenterWhenEnabled() throws IOException {
+    public void cacheBidsOpenrtbShouldPrependTraceInfoWithDatacenterWhenEnabled()
+            throws IOException, URISyntaxException {
+
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -1076,7 +1079,7 @@ public class CoreCacheServiceTest extends VertxTest {
                 .build();
 
         // when
-        final Future<CacheServiceResult> future = target.cacheBidsOpenrtb(
+        target.cacheBidsOpenrtb(
                 asList(bidInfo1, bidInfo2),
                 givenAuctionContext(),
                 CacheContext.builder()
@@ -1109,11 +1112,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cacheBidsOpenrtbShouldNotPrependTraceInfoToLowEntoryCacheIds() throws IOException {
+    public void cacheBidsOpenrtbShouldNotPrependTraceInfoToLowEntoryCacheIds() throws IOException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -1140,7 +1143,7 @@ public class CoreCacheServiceTest extends VertxTest {
                 .build();
 
         // when
-        final Future<CacheServiceResult> future = target.cacheBidsOpenrtb(
+        target.cacheBidsOpenrtb(
                 singletonList(bidInfo),
                 givenAuctionContext(),
                 CacheContext.builder()
@@ -1160,11 +1163,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cachePutObjectsShouldPrependTraceInfoWhenEnabled() throws IOException {
+    public void cachePutObjectsShouldPrependTraceInfoWhenEnabled() throws IOException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -1208,11 +1211,13 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cachePutObjectsShouldPrependTraceInfoWithDatacenterWhenEnabled() throws IOException {
+    public void cachePutObjectsShouldPrependTraceInfoWithDatacenterWhenEnabled()
+            throws IOException, URISyntaxException {
+
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
@@ -1256,11 +1261,11 @@ public class CoreCacheServiceTest extends VertxTest {
     }
 
     @Test
-    public void cachePutObjectsShouldNotPrependTraceInfoToPassedInKey() throws IOException {
+    public void cachePutObjectsShouldNotPrependTraceInfoToPassedInKey() throws IOException, URISyntaxException {
         // given
         target = new CoreCacheService(
                 httpClient,
-                new URL("http://cache-service/cache"),
+                new URI("http://cache-service/cache").toURL(),
                 null,
                 "http://cache-service-host/cache?uuid=",
                 100L,
